# graphduty

./: .gitignore  LICENSE  Main.hs  README.org  example.json  example.yaml  graphduty.cabal
GraphDuty/: Check.hs  Config.hs  Types.hs  Util.hs
src/GraphDuty/: Config.hs  Dispatch.hs  Util.hs
test/: Main.hs
