name:                   graphduty
version:                0.1.1.999
synopsis:               Graphite Monitoring with Alerting to PagerDuty
homepage:               http://github.com/dysinger/graphduty
license:                Apache-2.0
license-file:           README.org
author:                 Tim Dysinger <tim@dysinger.net>
maintainer:             Tim Dysinger <tim@dysinger.net>
category:               System
build-type:             Simple
cabal-version:          >=1.16

executable              graphduty
  main-is:              Main.hs
  other-modules:        GraphDuty.Check
                      , GraphDuty.Config
                      , GraphDuty.Dispatch
                      , GraphDuty.Types
                      , GraphDuty.Util
  default-language:     Haskell2010
  default-extensions:   DeriveDataTypeable
                        OverloadedStrings
                        RecordWildCards
                        TemplateHaskell
  ghc-options:          -Wall
                        -fllvm
                        -rtsopts
                        -static
                        -threaded
  build-depends:        base >=4.6
                      , aeson
                      , binary
                      , bytestring
                      , cmdargs
                      , conduit
                      , http-conduit
                      , remote
                      , transformers
                      , yaml
