name:                   graphduty
version:                0.1
synopsis:               Graphite Monitoring with Alerting to PagerDuty
homepage:               http://github.com/dysinger/graphduty
license:                Apache-2.0
license-file:           README.org
author:                 Tim Dysinger <tim@knewton.com>
maintainer:             Tim Dysinger <tim@knewton.com>
category:               System
build-type:             Simple
cabal-version:          >=1.16

executable              graphduty
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        GraphDuty.Check
                      , GraphDuty.Config
                      , GraphDuty.Dispatch
                      , GraphDuty.Types
                      , GraphDuty.Util
  default-language:     Haskell2010
  default-extensions:   DeriveDataTypeable
                        ExtendedDefaultRules
                        OverloadedStrings
                        RecordWildCards
                        TemplateHaskell
  ghc-options:          -Wall
                        -fllvm
                        -rtsopts
                        -static
                        -threaded
  build-depends:        base >=4.6
                      , aeson
                      , binary
                      , bytestring
                      , cmdargs
                      , conduit
                      , http-conduit
                      , remote
                      , transformers
                      , yaml
