name:                   graphduty
version:                0.1
synopsis:               Graphite Monitoring with Alerting to PagerDuty
homepage:               http://github.com/dysinger/graphduty
license:                Apache-2.0
license-file:           README.org
author:                 Tim Dysinger <tim@knewton.com>
maintainer:             Tim Dysinger <tim@knewton.com>
category:               System
build-type:             Simple
cabal-version:          >=1.16

executable              graphduty
  default-language:     Haskell2010
  default-extensions:   BangPatterns
                        DeriveDataTypeable
                        ExtendedDefaultRules
                        OverloadedStrings
                        RankNTypes
                        RecordWildCards
                        TemplateHaskell
  ghc-options:          -O2
                        -Wall
                        -fllvm
                        -rtsopts
                        -static
                        -threaded
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        GraphDuty.Check
                      , GraphDuty.Config
                      , GraphDuty.Dispatch
                      , GraphDuty.Types
                      , GraphDuty.Util
  build-depends:        base >=4.6
                      , aeson
                      , binary
                      , bytestring
                      , cmdargs
                      , conduit
                      , derive
                      , http-conduit
                      , remote
                      , transformers
                      , yaml

executable              test
  default-language:     Haskell2010
  default-extensions:   RankNTypes
                        TemplateHaskell
  ghc-options:          -Wall -fllvm -rtsopts -threaded
  hs-source-dirs:       test
  main-is:              Main.hs
  build-depends:        base >=4.6
                      , HUnit
                      , QuickCheck
                      , criterion
                      , test-framework
                      , test-framework-hunit
                      , test-framework-quickcheck2
                      , test-framework-th
